fix json parsing base64